# HexaneC2-pre-alpha

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json  monolith.hpp  note.txt
asm/: inj_start.asm
bofs/: beacon.h
bofs/kdmapper/: ddbcache.cpp  ddbcache.cpp~  driver.hpp  intel_driver.cpp  intel_driver.cpp~  intel_driver.hpp  intel_driver.hpp~
bofs/registry/: registry.cpp
bofs/tokens/: tokens.cpp  tokens.hpp
client/: Cargo.toml
client/src/: binary.rs  builder.rs  cipher.rs  error.rs  instance.rs  interface.rs  parser.rs  rstatic.rs  types.rs  utils.rs  websocket.rs  websocket.rs~
commands/include/: SeImpersonate.hpp  registry.hpp  tokens.hpp
commands/src/: EnumProcess.cpp  RegDisableDefender.cpp  SeImpersonate.cpp  classes.cpp  registry.cpp  tokens.cpp  veh.cpp
configs/: desktop.json  kaliwork.json  ltophome.json  ltopwork.json  modules.txt  momshouse.json  strings.txt
core/: configs.hpp  corelib.hpp  corelib.json  corelib.ld  corelib_start.asm  dotnet.hpp  implant.json  implant.ld  monolith.hpp  ntimports.hpp  scratchpad.cpp
core/corelib/: corelib.hpp  corelib.json  corelib.ld
core/implant/: implant.cpp  implant.hpp  implant.json  implant.ld  start.asm  start.json
core/include/: base.hpp  cipher.hpp  clients.hpp  commands.hpp  config.hpp  context.hpp  core.hpp  corelib.hpp  cruntime.hpp  dispatch.hpp  hash.hpp  implant.hpp  inject.hpp  memory.hpp  message.hpp  modules.cpp  modules.hpp  monolith.hpp  names.hpp  network.hpp  ntimports.hpp  objects.cpp.hpp  objects.hpp  opsec.hpp  parser.hpp  peers.hpp  process.hpp  sleep.hpp  stdlib.hpp  stream.hpp  threads.hpp  tokens.hpp  utils.hpp  vector.hpp  vector.hpp~  veh.hpp
core/src/: base.cpp  cipher.cpp  clients.cpp  commands.cpp  config.cpp  context.cpp  core.cpp  cruntime.cpp  dispatch.cpp  hash.cpp  implant.cpp  inject.cpp  layout.txt  memory.cpp  message.cpp  modules.cpp  network.cpp  nodes.cpp  objects.cpp  objects.cpp.bak  opsec.cpp  packet.cpp  packet.hpp  parser.cpp  parser.hpp  peers.cpp  process.cpp  sleep.cpp  sleep.cpp.bak  start.asm  stdlib.cpp  stream.cpp  threads.cpp  threads.cpp.bak  tokens.cpp  utils.cpp  vector.cpp  vector.cpp~  veh.cpp
implant/: MainExe.cpp  implant.json  linker.implant.ld  mainexe.cpp  start.asm  start.json
implant/include/: implant.hpp
implant/src/: implant.cpp
infra/ansible/: inventory.yaml  playbook.yaml
infra/terraform/: main.tf
inject/: config.cpp  config.hpp  inject.cpp  inject.hpp  injectlib.cpp  injectlib.hpp  injectlib.ld  injectlib_start.asm
inject/include/: config.hpp  injectlib.hpp  resource.hpp
inject/injectlib/: injectlib.cpp  injectlib.hpp  injectlib.json  injectlib.ld  resource.rc
inject/loader/: mainexe.cpp
inject/src/: config.cpp  injectlib.cpp
inject/threadless/: OpenFileExecute.cpp  loader.asm  threadless.json
json/: .windows_home.json.swp  .windows_vm.json.swp  desktop.json  desktop_linux.json  desktop_windows.json  linux_desktop.json  ltophome.json  ltopwork.json  momshouse.json  nvim  windows_desktop.json  windows_home.json  windows_vm.json  windows_work.json
listener/: Cargo.toml
listener/src/: main.rs
loader/: DllMain.cpp  dllmain.cpp  ldrcore.cpp  linker.loader.ld  loader.json  loaders.cpp  loaders.hpp  mainexe.cpp  resource.rc  threadless.json
loader/include/: injectlib.hpp
loader/src/: OpenFileExecute.cpp  dllmain.cpp  exemain.cpp  resource.cpp  rsrc.cpp
logs/: .1046533969-error.log.swp  .1129521535.swp  .118618249.swp  .1807589332-error.log.swp  .2016196930-error.log.swp  .2270045279.swp  .2354830472.swp  .2721377142.swp  .3181068198-error.log.swp  .3355210322-error.log.swp  .3500627955.swp  .3719681541.swp  .3951452754-error.log.swp  .4046279929-error.log.swp  .422295184.swp  .485982517.swp  .569054811.swp  1108424161  1129521535  118618249  1684373481  2270045279  2354830472  2721377142  2732285270  3102417560  3490949224  3500627955  3719681541  3966727935  4177425793  422295184  485982517  569054811  701146930  961414709  hook_vcvars
mods/src/: EnumDotNetProcesses.cpp  Impersonate.cpp  RegDisableDefender.cpp  SeImpersonate.cpp
payload/KaliWork/: interm.dmp
payload/moms/: cipher.dmp  utils.dmp
rust_server/: Cargo.toml  test.rs
rust_server/src/: main.rs  test.rs  types.rs  utils.rs
rust_server/src/client/: config.rs  error.rs  mod.rs  types.rs  utils.rs
rust_server/src/server/: binary.rs  builder.rs  cipher.rs  config.rs  error.rs  format.rs  instance.rs  listener.rs  mod.rs  parser.rs  rstatic.rs  session.rs  stream.rs  types.rs  utils.rs
scripts/: hexane_ida.txt
scripts/dotfile/: .tmux.conf  .zshrc
server/: Cargo.toml  builder.go  cipher.go  config.go  defs.go  go.mod  go.sum  http.go  main.go  message.go  parser.go  payloads.go  root_backup.go  stream.go  utils.go  windows_work.db
server-client/client/: Cargo.toml
server-client/client/src/: binary.rs  builder.rs  cipher.rs  instance.rs  interface.rs  main.rs  rstatic.rs  utils.rs  ws.rs  ws.rs~
server-client/hexlib/: Cargo.toml
server-client/hexlib/src/: error.rs  lib.rs  parser.rs  stream.rs  types.rs
server-client/server/: Cargo.toml
server-client/server/src/: #builder.rs#  .#builder.rs  binary.rs  builder.rs  cipher.rs  data.rs  data.rs~  error.rs  instance.rs  interface.rs  main.rs  parser.rs  stream.rs  types.rs  utils.rs
server-client/ws_client/: Cargo.toml
server-client/ws_client/src/: main.rs  ws.rs
server/cmd/: implants.go  root.go
server/core/: binary.go  build_backup.txt  builder.go  cipher.go  command.go  compile.go  config.go  core.go  defs.go  http.go  inject.go  message.go  parser.go  payloads.go  printer.go  sqlite.go  stream.go  utils.go
server/src/: binary.rs  builder.rs  cipher.rs  error.rs  format.rs  instance.rs  interface.rs  main.rs  parser.rs  rstatic.rs  stream.rs  types.rs  utils.rs
server/src/server/: binary.rs  cipher.rs  instance.rs  mod.rs  parser.rs  rstatic.rs  session.rs
terraform/: main.tf
test/: fnv_test.cpp  link_test.cpp  link_test.hpp
user/: OpenFileExecute.cpp
ws_client/: Cargo.toml  Cargo.toml~
ws_test/: Cargo.toml  Cargo.toml~
(+76 files in other folders)
