[package]
name = "hexane-server"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
lazy_static = "1.5.0"
crossbeam-channel = "0.5.13"
derive_more = { version = "1.0.0", features = ["from"] }
