[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tokio-tungstenite = {version = "0.24.0"}
byteorder = {version = "1.5.0"}
encoding_rs = {version = "0.8.35"}
warp = "0.3"
log = "0.4"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
