[package]
name = "hexane-client"
version = "0.1.0"
edition = "2021"

[dependencies]
hexlib = {path = "../hexlib"}
bincode = "1.3.3"
reqwest = { version = "0.12.9", features = ["blocking"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
lazy_static = "1.5.0"
crossbeam-channel = "0.5.13"
derive_more = { version = "1.0.0", features = ["from"] }
rand = "0.9.0-alpha.2"
byteorder = "1.5.0"
encoding_rs = "0.8.34"
pe-parser = "0.6.0"
rayon = "1.10.0"
prettytable = "0.10.0"
futures-util = "0.3.29"
tokio = { version = "1.35.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
