[package]
name = "hexane-client"
version = "0.1.0"
edition = "2021"

[dependencies]
hexlib = {path = "../hexlib"}
bincode = "1.3.3"
reqwest = { version = "0.12.12", features = ["blocking"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
lazy_static = "1.5.0"
crossbeam-channel = "0.5.14"
derive_more = { version = "1.0.0", features = ["from"] }
rand = "0.9.0-beta.1"
byteorder = "1.5.0"
encoding_rs = "0.8.35"
pe-parser = "0.6.0"
rayon = "1.10.0"
prettytable = "0.10.0"
futures = { version = "0.3.31", default-features = false }
futures-util = "0.3.31"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
tungstenite = {version = "0.24.0", optional=false}
rustls = {version = "0.20.9"}
hashbrown = {version = "0.15.1"}
