[package]
name = "hexlib"
version = "0.1.0"
edition = "2021"

[dependencies]
warp ="0.3.7"
bincode = "1.3.3"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
lazy_static = "1.5.0"
derive_more = { version = "1.0.0", features = ["from"] }
tungstenite = { version = "0.24.0" }
byteorder = "1.5.0"
encoding_rs = "0.8.34"
