[package]
name = "hexlib"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = {version="0.3.7", optional=false}
bincode = {version="1.3.3", optional=false}
serde = {version = "1.0.214", features = ["derive"], optional=false}
serde_json = {version="1.0.132", optional=false}
lazy_static = {version="1.5.0", optional=false}
derive_more = {version = "1.0.0", features = ["from"], optional=false}
tungstenite = {version = "0.24.0", optional=false}
byteorder = {version="1.5.0", optional=false}
encoding_rs = {version="0.8.35", optional=false}

futures = { version = "0.3.31", default-features = false }
futures-util = "0.3.29"
tokio = { version = "1.35.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }