[package]
name = "hexane-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
once_cell = "1.20.2"
uuid = { version = "1.1.2", features = ["serde", "v4"] }

warp = {version="0.3.7", optional=false}
bincode = {version="1.3.3", optional=false}
pe-parser = {version="0.6.0"}

serde = {version = "1.0.214", features = ["derive"], optional=false}
serde_json = {version="1.0.132", optional=false}

lazy_static = {version="1.5.0", optional=false}
derive_more = {version = "1.0.0", features = ["full"], optional=false}

tokio-stream = "0.1.14"
tokio = { version = "1.28", features = ["macros", "sync", "rt-multi-thread"] }
tungstenite = {version = "0.24.0", optional=false}
tokio-tungstenite = {version = "0.24.0", optional=false}
futures = { version = "0.3.31", default-features = false }
crossbeam-channel = {version="0.5.13"}

byteorder = {version="1.5.0", optional=false}
encoding_rs = {version="0.8.35", optional=false}
hashbrown = {version="0.15.1"}
