[package]
name = "ws_client"
version = "0.1.0"
edition = "2021"

[dependencies]
hex_lib = {path = "../hex_lib"}
futures = {version = "0.3.31"}
futures-util = {version = "0.3.31"}
futures-channel = {version = "0.3.31"}
tokio = {version = "1.41.0", features = ["full"]}
tokio-tungstenite = {version = "0.24.0"}
    