[package]
name = "ws_client"
version = "0.1.0"
edition = "2021"

[dependencies]
hexlib = {path = "../hexlib"}
futures = {version = "0.3.31"}
futures-util = {version = "0.3.31"}
futures-channel = {version = "0.3.31"}
tokio = {version = "1.41.0", features = ["full"]}
tokio-tungstenite = {version = "0.24.0"}
serde = {version = "1.0.214"}
serde_json = {version = "1.0.132"}
tungstenite = "0.16.0"
url = "2.2.2"
